# GhostKG

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MULTI_DATABASE_SUMMARY.md  README.md  SENTIMENT_UPGRADE_SUMMARY.md  demo_sentiment_verification.py  external_program_example.db  ghostkg_dev.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_existing_db.py  test_sqlalchemy.py
.github/: CODE_QUALITY.md
.github/workflows/: test.yml  tests.yml
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  BACKWARD_COMPAT_REMOVAL.md  COGNITIVE_TESTS_STATUS.md  CONFIGURATION.md  CORE_COMPONENTS.md  DATABASE_CONFIG.md  DATABASE_SCHEMA.md  DEMONSTRATION.md  DEVELOPMENT.md  FAST_MODE_CONFIG.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEGACY_OLLAMA_REMOVAL.md  LLM_PROVIDERS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  README.md  REFACTORING_PLAN.md  RESTRUCTURING_SUMMARY.md  TEST_FIX_SUMMARY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  UV_SETUP.md  VISUALIZATION.md  index.md
docs/api/: agent.md  cache.md  cognitive.md  config.md  exceptions.md  extraction.md  fsrs.md  manager.md  storage.md
docs/examples/: existing_database_integration.md  export_history.md  external_program.md  hourly_simulation.md  index.md  round_based_simulation.md  use_case_example.md
docs/summaries/: DEV_MODE_SUMMARY.md  DOCUMENTATION_REVIEW_SUMMARY.md  EXISTING_DB_SUMMARY.md  KG_PREFIX_SUMMARY.md  PACKAGE_STRUCTURE_UPDATE.md  README.md  SERVER_403_FIX_SUMMARY.md  VISUALIZATION_FIX_SUMMARY.md  VISUALIZATION_IMPLEMENTATION.md
examples/: existing_database_integration.py  export_history.py  external_program.py  hourly_simulation.py  multi_database_demo.py  multi_provider_llm.py  relational_debate.py  round_based_simulation.py  usage_modes_demo.py  use_case_example.py
ghost_kg/: __init__.py  __main__.py  agent.py  cache.py  cli.py  cognitive.py  config.py  core.py  core_original_backup.py  dependencies.py  exceptions.py  extraction.py  fsrs.py  manager.py  storage.py  visualization.py
ghost_kg/core/: __init__.py  agent.py  cognitive.py  manager.py
ghost_kg/extraction/: __init__.py  extraction.py
ghost_kg/llm/: __init__.py  service.py
ghost_kg/memory/: __init__.py  cache.py  fsrs.py
ghost_kg/storage/: __init__.py  database.py  database_sqlite3.py  engine.py  models.py
ghost_kg/templates/: app.js  index.html  simulation_history.json  style.css
ghost_kg/utils/: __init__.py  config.py  exceptions.py  time_utils.py
requirements/: all.txt  base.txt  database.txt  dev.txt  docs.txt  fast.txt  llm.txt  viz.txt
tests/: test_additional_coverage.py  test_comprehensive.py  test_config.py  test_dependencies.py  test_error_handling.py  test_fast_mode_config.py  test_process_and_get_context.py  test_sentiment_improvements.py
tests/fixtures/: conftest.py  mock_data.py
tests/integration/: test_llm_service_modes.py  test_multi_agent.py  test_workflows.py
tests/performance/: test_benchmarks.py  test_memory.py
tests/unit/: test_agent.py  test_cache.py  test_cognitive.py  test_existing_database.py  test_extraction.py  test_fsrs.py  test_llm_service.py  test_manager.py  test_storage.py  test_time_utils.py
