[project]
name = "ghost-kg"
version = "0.2.0"
description = "Dynamic Knowledge Graph with FSRS-6 Forgetting for LLM Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Giulio Rossetti", email = "giulio.rossetti@gmail.com"}
]
keywords = ["knowledge-graph", "llm", "fsrs", "spaced-repetition", "memory", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core dependencies (always required)
dependencies = [
    "networkx>=3.0,<4.0",
    "fsrs>=1.0.0,<2.0",
]

[project.optional-dependencies]
# LLM support for semantic triplet extraction
llm = [
    "ollama>=0.1.6,<1.0",
]

# Fast mode for local triplet extraction without LLM
fast = [
    "gliner>=0.1.0",
    "textblob>=0.15.0,<1.0",
]

# Development tools
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-asyncio>=0.21,<1.0",
    "mypy>=1.0,<2.0",
    "black>=23.0,<27.0",
    "isort>=5.12,<6.0",
    "flake8>=6.0,<7.0",
    "pylint>=2.17,<4.0",
    "radon>=5.1,<7.0",
    "pre-commit>=3.0,<4.0",
]

# Documentation generation
docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<1.0",
    "pymdown-extensions>=10.0,<11.0",
]

# All optional dependencies
all = [
    "ollama>=0.1.6,<1.0",
    "gliner>=0.1.0",
    "textblob>=0.15.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/GiulioRossetti/GhostKG"
Documentation = "https://github.com/GiulioRossetti/GhostKG/tree/main/docs"
Repository = "https://github.com/GiulioRossetti/GhostKG"
Issues = "https://github.com/GiulioRossetti/GhostKG/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "black>=23.0,<27.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true

# Exclude backup files
exclude = [
    "core_original_backup.py",
]

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gliner.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textblob.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
